--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@radix-ui/themes": "^3.1.6",
@@ -45,6 +45,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "country-data-list": "^1.4.0",
+    "embla-carousel-react": "^8.6.0",
     "hammerjs": "^2.0.8",
     "lucide-react": "^0.473.0",
     "md5": "^2.3.0",
